Fixed socket conntection after registration, scrollbar on small screens, scrolling to the new message

--- a/src/client/styles/chat/messages.less
+++ b/src/client/styles/chat/messages.less
@@ -8,6 +8,7 @@ messages-area {
 
     .message {
       width: 60%;
+      text-overflow: ellipsis;
     }
 
     .my-message {
