--- a/src/client/styles/variables.less
+++ b/src/client/styles/variables.less
@@ -9,4 +9,4 @@
 
 @login-form-width: 400px;
 
-@chat-height: 82vh;
+@chat-height: ~"calc(100vh - 150px)";
